tests/compile-fail/no-main.disco
// This function is not main
fn foo() {}
